--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -76,7 +76,7 @@ smartTOCHideUnfocusedChildren = true
   layoutBackgroundBlur = true # only used when heroStyle equals background
   layoutBackgroundHeaderSpace = false
   showBreadcrumbs = false
-  showSummary = false
+  showSummary = true
   showViews = false
   showLikes = false
   showTableOfContents = true
